# consolidator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coffee.yml  pyproject.toml
src/: consolidate.rs  main.rs  parse.rs
tests/: pyproject.toml  test_consolidator.py  util.py
