[package]
name = "consolidator"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ['std'] }
log-panics = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["fs","sync"] }
cln-rpc = "0.2"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.1" }
cln-plugin = "0.2"
# cln-plugin = { path="../lightning/plugins/", version = "^0.1" }

bitcoin = "0.30"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false